Fix an issue where an appearing scrollbar would make the page smaller, removing the need for a scrollbar

--- a/activities/FoodChain.activity/styles.css
+++ b/activities/FoodChain.activity/styles.css
@@ -330,9 +330,9 @@
 }
 
 .cards {
-	padding-top: 6%;
+	padding-top: 60px;
 	padding-left: 1%;
-	padding-bottom: 6%;
+	padding-bottom: 60px;
 }
 
 .game-box {
